--- a/App_registro/templates/App_registro/registro.html
+++ b/App_registro/templates/App_registro/registro.html
@@ -1,4 +1,4 @@
-{% extends 'App_core/base.html' %}
+{% extends 'App_core/base-header.html' %}
 {% load static %}
 {% block title %}{{title}}{% endblock %}
 {% block content %}
