--- a/App_core/templates/App_core/base-header.html
+++ b/App_core/templates/App_core/base-header.html
@@ -47,12 +47,16 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="{% url 'home' %}">Home</a></li>
-          <li><a href="#about">Acerca de</a></li>
-          <li><a href="{% url 'recetas' %}">Recetas</a></li>
-          <li><a href="#contact">Contacto</a></li>
-          <li class="book-a-table text-center"><a href="{% url 'registro' %}">Registro</a></li>
-          <li class="book-a-table text-center"><a href="{% url 'login' %}">Ingresar</a></li>
+          {% if not request.user.is_authenticated %}
+            <li class="active"><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="#about">Acerca de</a></li>
+            <li><a href="#">Recetas</a></li>
+            <li><a href="#contact">Contacto</a></li>
+            <li class="book-a-table text-center"><a href="">Registro</a></li>
+            <li class="book-a-table text-center"><a href="{% url 'login' %}">Ingresar</a></li>
+          {% else %}
+            <li class="book-a-table text-center"><a href="{% url 'logout' %}">Cerrar Sesión</a></li>          
+          {% endif %}
         </ul>
       </nav><!-- .nav-menu -->
 
