--- a/App_core/templates/App_core/home.html
+++ b/App_core/templates/App_core/home.html
@@ -1,4 +1,4 @@
-{% extends 'App_core/base.html' %}
+{% extends 'App_core/base-header.html' %}
 {% load static %}
 {% block title %}Home{% endblock %}
 {% block content %}
@@ -46,7 +46,7 @@
               Podrás compartir tus propias recetas, comentar y puntuar las recetas de la comunidad 
             </p>
 
-            <a href="{% url 'registro' %}"><button class="boton-global">Registro</button></a>
+            <a href=""><button class="boton-global">Registro</button></a>
           </div>
         </div>
 
